--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -65,8 +65,10 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-rc01"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-rc01"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     wearApp project(":wear")
 }
