--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 
     implementation 'com.google.android.material:material:1.2.0'
 
